add missing files

--- a/zephyr/CMakeLists.txt
+++ b/zephyr/CMakeLists.txt
@@ -10,6 +10,7 @@ zephyr_library_include_directories(../src/radio/lr1110)
 zephyr_library_include_directories(../src/radio/lr1110/lr1110_driver)
 zephyr_library_include_directories(../src/radio/lr1110/lr1110_driver/src)
 zephyr_library_include_directories(../src/peripherals/lr1110-se)
+zephyr_library_include_directories(../src/peripherals/soft-se)
 
 zephyr_library_sources_ifdef(CONFIG_HAS_SEMTECH_LORAMAC ../src/mac/LoRaMacAdr.c)
 zephyr_library_sources_ifdef(CONFIG_HAS_SEMTECH_LORAMAC ../src/mac/LoRaMac.c)
@@ -42,8 +43,10 @@ zephyr_library_sources_ifdef(CONFIG_HAS_LR1110_SECURE_ELEMENT ../src/radio/lr111
 zephyr_library_sources_ifdef(CONFIG_HAS_LR1110_SECURE_ELEMENT ../src/peripherals/lr1110-se/lr1110-se.c)
 zephyr_library_sources_ifdef(CONFIG_HAS_LR1110_SECURE_ELEMENT ../src/peripherals/lr1110-se/lr1110-se-hal.c)
 
-zephyr_library_sources_ifdef(CONFIG_HAS_LR1110_SOFT_SE ../src/peripherals/soft-se.c)
-zephyr_library_sources_ifdef(CONFIG_HAS_LR1110_SOFT_SE ../src/peripherals/soft-se-hal.c)
+zephyr_library_sources_ifdef(CONFIG_HAS_LR1110_SOFT_SE ../src/peripherals/soft-se/soft-se.c)
+zephyr_library_sources_ifdef(CONFIG_HAS_LR1110_SOFT_SE ../src/peripherals/soft-se/aes.c)
+zephyr_library_sources_ifdef(CONFIG_HAS_LR1110_SOFT_SE ../src/peripherals/soft-se/cmac.c)
+zephyr_library_sources_ifdef(CONFIG_HAS_LR1110_SOFT_SE ../src/peripherals/soft-se/soft-se-hal.c)
 
 zephyr_library_sources_ifdef(CONFIG_HAS_SEMTECH_LORAMAC ../src/system/timer.c)
 zephyr_library_sources_ifdef(CONFIG_HAS_SEMTECH_LORAMAC ../src/system/delay.c)
